policies/standard/pod_hostaliases/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodHostaliasesPolicy
metadata:
  name: k8spodhostaliasespolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "ReplicationController"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    excludedNamespaces: []
