policies/standard/pod_hostaliases/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodhostaliasespolicy
  annotations:
    description: >-
      HostAliases should not be specified
spec:
  crd:
    spec:
      names:
        kind: K8sPodHostaliasesPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodhostaliasespolicy

        violation[{"msg": msg}] {
          o := input_object[_]
          input_hostaliases(o)
          msg := sprintf("HostAliases are not allowed, pod: %v", [input.review.object.metadata.name])
        }

        input_hostaliases(o) {
          o.spec.hostAliases
        }

        input_object[o] {
          input.review.object.kind == "Pod"
          o := input.review.object
        }

        input_object[o] {
          input.review.object.kind == "CronJob"
          o := input.review.object.spec.jobTemplate.spec.template
        }

        input_object[o] {
          o := input.review.object.spec.template
        }
